# Fuzzy

./: CMakeLists.txt  Documentation.docx  Fuzzy_Sets_Viewer.xlsx  backup.cpp  checklist.xlsx  checklist_22009349.xlsx  data.json  data_angle_vs_angle_dot.txt  fuzzylogic.cpp  fuzzylogic.h  main.cpp  makefile
A2documentations/: Documentation.docx  Fuzzy_Sets_Viewer.xlsx
documentations/: ControlSurface.xlsx
